--- a/index.html
+++ b/index.html
@@ -11,22 +11,34 @@
 
 <body>
     <main>
-        <div class="container-fluid">
+        <div class="container-fluid" id="testId">
             <div class="row">
-                <div class="col-4 mt-2">
-                    <form class="d-flex" id="formId" onsubmit="app.todoController.addTodo(event)">
-                        <input type="text" class="form-control" name="description" placeholder="Add a Todo..." />
-                        <button class="btn btn-success ml-2 " type="submit">
-                            Add
-                        </button>
-                    </form>
+                <div class="col" id="tempId">
+
                 </div>
-
             </div>
-            <div class=" row">
-                <div class="col-3">
-                    <div id="todoId">
 
+            <div class="row">
+                <div class="col-3 shadow-lg" id="logoId">
+                    <div class="row">
+                        <div class="col p-2 mt-2">
+                            <form class="d-flex" id="formId" onsubmit="app.todoController.addTodo(event)">
+                                <input type="text" class="form-control" name="description"
+                                    placeholder="Add a Todo..." />
+                                <button class="btn btn-success ml-2 " type="submit">
+                                    Add
+                                </button>
+                            </form>
+                        </div>
+
+                    </div>
+                    <div class=" row">
+                        <div class="col">
+                            <div id="todoId">
+
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -41,6 +53,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="app/main.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 </body>
 
 </html>
