--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
     <main>
         <div class="container-fluid" id="testId">
             <div class="row">
-                <div class="col" id="tempId">
-
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-3 shadow-lg" id="logoId">
+                <div class="col-3" id="logoId">
                     <div class="row">
                         <div class="col p-2 mt-2">
                             <form class="d-flex" id="formId" onsubmit="app.todoController.addTodo(event)">
@@ -41,13 +35,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-7">
+
+                </div>
+                <div class="col" id="tempId">
+
+                </div>
+
             </div>
         </div>
+        </div>
+        </div>
     </main>
-    <footer class="container-fluid bg-transparent text-light">
+    <footer class="container-fluid bg-dark text-light">
         <div class="row text-center">
             <div class="col">
-                <p><small>Made with love by Codeworks</small></p>
+                <div class="row" id="quoteId"></div>
             </div>
         </div>
     </footer>
